# nheqminer

./: .gitignore  CMakeLists.txt  README.md  README_NEW.MD  cmake_install.cmake  nvidia.txt  readme.txt
cpu_tromp/: CMakeLists.txt  cpu_tromp.cpp  equi.h  equi_miner.h
cpu_xenoncat/: CMakeLists.txt  cmake_install.cmake
cpu_xenoncat/asm_linux/: assemble.sh
cuda_djezo/: CMakeLists.txt  cmake_install.cmake  eqcuda.hpp  equi_miner.cu
cuda_tromp/: CMakeLists.txt  cuda_tromp.cpp  eqcuda.hpp  equi_miner.cu
nheqminer/: AvailableSolvers.h  MinerFactory.cpp  MinerFactory.h  main.cpp  serialize.h  utilstrencodings.cpp  utilstrencodings.h
nheqminer/libstratum/: StratumClient.cpp  ZcashStratum.cpp
nheqminer/primitives/: block.cpp  block.h
ocl_device_utils/: CMakeLists.txt  cl_ext.hpp  ocl_device_utils.cpp  opencl.cpp  opencl.h
ocl_silentarmy/: CMakeLists.txt  _kernel.h  ocl_silentarmy.cpp  param.h
tromp/: CMakeLists.txt  cpu_tromp.cpp  cpu_tromp.hpp  cuda_tromp.cpp  equi.cpp  equi.h  equi_miner.cpp  equi_miner.cu  equi_miner.h  osx_barrier.cpp  osx_barrier.h
