set(EXECUTABLE ocl_device_utils)

add_library(${EXECUTABLE} STATIC 
			${CMAKE_CURRENT_SOURCE_DIR}/cl_ext.hpp	
			${CMAKE_CURRENT_SOURCE_DIR}/ocl_device_utils.h
			${CMAKE_CURRENT_SOURCE_DIR}/ocl_device_utils.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/opencl.h
			${CMAKE_CURRENT_SOURCE_DIR}/opencl.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/OpenCLDevice.h
			)
#TARGET_LINK_LIBRARIES(${EXECUTABLE} )

#install( TARGETS ${EXECUTABLE} RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION lib )
#install( FILES ${HEADERS} DESTINATION include/${EXECUTABLE} )
